# osm-xapi

./: README.md  osm-xapi.cabal
examples/: Test.hs  sl_stop_id.osm
src/Data/Geo/OSM/: Xapi.hs
src/Data/Geo/OSM/Xapi/: Meta.hs  Note.hs  Xapi.hs
src/Data/Geo/OSM/Xapi/Lens/: MetaL.hs  NoteL.hs
